--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-light.ico" media="(prefers-color-scheme:no-preference)">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"  media="(prefers-color-scheme:dark)">
+    <link rel="icon" href="%PUBLIC_URL%/favicon-light.ico" media="(prefers-color-scheme:light)">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#2c384e" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Pre-Catastrophe Warning System"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CatWarn</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
